--- a/lesson-5/project-backend/package.json
+++ b/lesson-5/project-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-node-rest-api",
+  "name": "my-movies-backend",
   "type": "module",
   "scripts": {
     "start": "node app.js",
